[ci skip] Crowdin translation bot: New translations for Greek

--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -9,4 +9,77 @@ to the public domain.
 You should have received a copy of the CC0 legalcode along with this
 work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
 -->
-<resources xmlns:tools="http://schemas.android.com/tools"></resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="settings">Ρυθμίσεις</string>
+    <string name="light">Φωτεινό</string>
+    <string name="dark">Σκοτεινό</string>
+    <string name="delete">Διαγραφή</string>
+    <string name="appearance">Εμφάνιση</string>
+    <string name="rename">Μετονομασία</string>
+    <string name="confirm_delete">Επιβεβαίωση Διαγραφής</string>
+    <string name="do_you_really_want_to_delete_this_witharg">Θέλετε πραγματικά να διαγράψετε το %s?</string>
+    <string name="confirm_overwrite">Επιβεβαίωση Αντικατάστασης</string>
+    <string name="file_already_exists_overwerite">Το αρχείο υπάρχει ήδη, αντικατάσταση;</string>
+    <string name="browse_filesystem">Περιήγηση στο σύστημα αρχείων</string>
+    <string name="title">Τίτλος</string>
+    <string name="empty_directory">Κενός φάκελος</string>
+    <string name="enter_name_of_folder">Εισάγετε το όνομα του φακέλου σας</string>
+    <string name="create_folder">Δημιουργία Φακέλου</string>
+    <string name="create_new_document">Δημιουργία νέου εγγράφου</string>
+    <string name="move">Μετακίνηση</string>
+    <string name="info">Πληροφορίες</string>
+    <string name="file_folder_already_exists_please_use_a_different_name">Το αρχείο/φάκελος υπάρχει ήδη! Παρακαλούμε χρησιμοποιήστε ένα διαφορετικό όνομα</string>
+    <string name="import_from_device">Εισαγωγή από τη συσκευή</string>
+    <string name="import_">Εισαγωγή</string>
+    <string name="append_to_witharg">Προσάρτηση σε %s</string>
+    <string name="select_folder">Επιλογή φακέλου</string>
+    <string name="edit">Επεξεργασία</string>
+    <string name="search_documents">Αναζήτηση εγγράφου(ων)</string>
+    <string name="share_to_arrow" tools:ignore="TypographyEllipsis">Κοινή χρήση σε&#8230;</string>
+    <string name="share">Κοινοποίηση</string>
+    <string name="search">Αναζήτηση</string>
+    <string name="display_converted_markup">Εμφάνιση markup που έχει μετατραπεί</string>
+    <string name="editor">Επεξεργαστής</string>
+    <string name="folders">Φάκελοι</string>
+    <string name="files">Αρχεία</string>
+    <string name="document">Έγγραφο</string>
+    <string name="documents">Έγγραφα</string>
+    <string name="html_as_plaintext">HTML (ως απλό κείμενο)</string>
+    <string name="document_editor_font">Γραμματοσειρά Επεξεργαστή Εγγράφου</string>
+    <string name="theme">Θέμα</string>
+    <string name="open_existing_files_in_view_mode">Άνοιγμα υπαρχόντων αρχείων σε λειτουργία προβολής</string>
+    <string name="about">Σχετικά</string>
+    <string name="plaintext">Απλό Κείμενο</string>
+    <string name="file">Αρχείο</string>
+    <string name="image">Εικόνα</string>
+    <string name="font_size">Μέγεθος Γραμματοσειράς</string>
+    <string name="render_rtl_language">Χρήση για γλώσσες με φορά δεξιά-προς-αριστερά</string>
+    <string name="error_cannot_create_notebook_dir__appspecific">Σφάλμα: Δεν είναι δυνατή η δημιουργία καταλόγου αποθήκευσης</string>
+    <string name="last_modified_witharg">Τελευταία τροποποίηση: %s</string>
+    <string name="select_this_folder">Επιλέξτε αυτόν τον φάκελο</string>
+    <string name="select">Επιλογή</string>
+    <string name="create">Δημιουργία</string>
+    <string name="select_entries">Επιλέξτε καταχωρήσεις</string>
+    <string name="one_item_selected">Επιλέχθηκε ένα στοιχείο</string>
+    <string name="items_selected_witharg" tools:ignore="PluralsCandidate">%d επιλεγμένα στοιχεία</string>
+    <string name="hide_statusbar_at_this_view">Απόκρυψη γραμμής κατάστασης σε αυτήν την προβολή</string>
+    <string name="hide_statusbar">Απόκρυψη γραμμής κατάστασης</string>
+    <string name="name">Όνομα</string>
+    <string name="url_or_path">URL / Διαδρομή</string>
+    <string name="insert_link">Εισαγωγή συνδέσμου</string>
+    <string name="insert_image">Εισαγωγή εικόνας</string>
+    <string name="contributors">Συντελεστές</string>
+    <string name="save_location">Αποθήκευση τοποθεσίας</string>
+    <string name="select_storage_folder">Επιλογή φακέλου αποθήκευσης</string>
+    <string name="licenses">Άδειες</string>
+    <string name="changelog">Αρχείο Αλλαγών</string>
+    <string name="more_info">Περισσότερες πληροφορίες</string>
+    <string name="show_license_of_the_app">Εμφάνιση άδειας της εφαρμογής</string>
+    <string name="show_third_party_licenses">Εμφάνιση αδειών τρίτων</string>
+    <string name="language_change_restart_description">Αλλαγή γλώσσας αυτής της εφαρμογής. Επανεκκίνηση της εφαρμογής για να τεθούν σε ισχύ οι αλλαγές</string>
+    <string name="language">Γλώσσα</string>
+    <string name="error_need_storage_permission_to_save_documents">Χρειάζεστε άδεια αποθήκευσης για να αποθηκεύσετε έγγραφα</string>
+    <string name="open_with">Άνοιγμα με</string>
+    <string name="reverse_order">Αντίστροφη σειρά</string>
+    <string name="contribute">Συνεισφέρετε</string>
+</resources>
