--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -80,6 +80,34 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="language">Γλώσσα</string>
     <string name="error_need_storage_permission_to_save_documents">Χρειάζεστε άδεια αποθήκευσης για να αποθηκεύσετε έγγραφα</string>
     <string name="open_with">Άνοιγμα με</string>
+    <string name="sort">Ταξινόμηση κατά</string>
+    <string name="date">Ημερομηνία</string>
+    <string name="deleteme____1">Όνομα</string>
+    <string name="size">Μέγεθος</string>
     <string name="reverse_order">Αντίστροφη σειρά</string>
     <string name="contribute">Συνεισφέρετε</string>
+    <string name="donate">Δωρεά</string>
+    <string name="project_page">Σελίδα έργου</string>
+    <string name="press_back_again_to_exit">Πατήστε ξανά \'Πίσω\' για έξοδο</string>
+    <string name="exit">Έξοδος</string>
+    <string name="undo">Αναίρεση</string>
+    <string name="redo">Επανάληψη</string>
+    <string name="more">Περισσότερα</string>
+    <string name="notebook">Σημειωματάριο</string>
+    <string name="help">Βοήθεια</string>
+    <string name="todo_list">Λίστα Προς υλοποίηση</string>
+    <string name="task">Εργασία</string>
+    <string name="category">Κατηγορία</string>
+    <string name="context">Πλαίσιο</string>
+    <string name="list">Λίστα</string>
+    <string name="priority">Προτεραιότητα</string>
+    <string name="history">Ιστορικό</string>
+    <string name="sync">Συγχρονισμός</string>
+    <string name="search_or_custom">Αναζήτηση / Προσαρμοσμένη</string>
+    <string name="save">Αποθήκευση</string>
+    <string name="update">Ενημέρωση</string>
+    <string name="clear">Εκκαθάριση</string>
+    <string name="due_date">Ημερομηνία λήξης</string>
+    <string name="current_date">Τρέχουσα ημερομηνία</string>
+    <string name="archive">Αρχειοθέτηση</string>
 </resources>
