[ci skip] Crowdin translation bot: New translations for Chinese Traditional

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -187,6 +187,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_tab">表格</string>
     <string name="start_on_bottom">從底端開始</string>
     <string name="start_on_bottom_when_loading_document">當載入文件後，游標位於末尾</string>
+    <string name="unordered_list_char_dash">連接符 (-)</string>
     <string name="unordered_list_char_asterisk">星號 (*)</string>
     <string name="unordered_list_char_plus">加號 (+)</string>
     <string name="filemanager_doesnot_supply_required_data__appspecific">Makor 僅能編輯本機，離線的文件，也不支援未提供完整路徑的檔案管理程式。</string>
@@ -242,6 +243,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="no_calendar_app_is_installed">未找到日曆應用程式</string>
     <string name="color">顏色</string>
     <string name="zero_width_space">零寬度空格</string>
+    <string name="basic_color_scheme">基本顏色主題</string>
     <string name="preset">預設</string>
     <string name="foreground">前景色</string>
     <string name="background">背景</string>
@@ -261,10 +263,15 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="close">關閉</string>
     <string name="cancel">取消</string>
     <string name="do_you_like_this_project_want_donate_to_keep_alive">喜歡這個專案嗎？希望它繼續改善而且問題得到解決嗎？\n\n開發應用程式以及撰寫相關部落格文章都需要很多時間！如果你想要幫忙讓專案可以繼續，請考慮小額捐款！\n\n這個專案是在閒暇時間開發的，完全免費，並且沒有任何廣告！</string>
+    <string name="app_start_tab">啟動顯示頁面</string>
     <string name="swipe_to_change_mode">滑動以更改模式</string>
     <string name="folder_first">資料夾優先</string>
     <string name="go_to">前往</string>
+    <string name="appdata_public">應用程式資料(公開)</string>
+    <string name="appdata_private">應用程式資料(私人)</string>
+    <string name="appdata_sdcard">應用程式資料(SD卡)</string>
     <string name="internal_storage">內部儲存空間</string>
+    <string name="navigationbar_color">導覽列顏色</string>
     <string name="black">黑色</string>
     <string name="white">白色</string>
     <string name="view">檢視</string>
@@ -275,13 +282,52 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="favourite">新增至我的最愛</string>
     <string name="favourites">最愛列表</string>
     <string name="please_wait">請稍等</string>
+    <string name="app_start_folder">程式啟動時跳轉資料夾</string>
     <string name="tab_width">製表符寬度</string>
     <string name="reload">重新下載</string>
     <string name="always_open_with_this_app">永遠使用此應用程式開啟</string>
     <string name="template">模板</string>
     <string name="send_debug_log">發送偵錯日誌</string>
+    <string name="print_pdf">列印 / PDF</string>
+    <string name="current">現在</string>
     <string name="attach">附件</string>
     <string name="copy_file">複製檔案</string>
+    <string name="page">頁面</string>
     <string name="experimental_features">實驗性功能</string>
     <string name="tools">工具</string>
+    <string name="reading">閱讀中</string>
+    <string name="table">表格</string>
+    <string name="delete_lines">刪除線</string>
+    <string name="unordered_list">無排序清單</string>
+    <string name="ordered_list">有序列表</string>
+    <string name="check_list">檢查清單</string>
+    <string name="open_link">開啟鏈接</string>
+    <string name="common_color_picker">顏色選擇器</string>
+    <string name="date_and_time">日期與時間</string>
+    <string name="jump_to_bottom">跳到底部</string>
+    <string name="quote">引述</string>
+    <string name="heading">標題</string>
+    <string name="heading_1">標題大小1</string>
+    <string name="heading_2">標題大小2</string>
+    <string name="heading_3">標題大小3</string>
+    <string name="heading_4">標題大小4</string>
+    <string name="heading_5">標題大小5</string>
+    <string name="bold">粗體</string>
+    <string name="italic">斜體</string>
+    <string name="highlighted">突出顯示</string>
+    <string name="strikeout">刪除線</string>
+    <string name="inline_code">行間內程式碼</string>
+    <string name="horizontal_line">水平分隔線</string>
+    <string name="link_color">連結顏色</string>
+    <string name="sort_alphabetically">依英文字母排序</string>
+    <string name="create_new_file_or_folder">建立新檔案或資料夾</string>
+    <string name="choose_format">選擇格式</string>
+    <string name="selected">選擇</string>
+    <string name="back">返回</string>
+    <string name="expand_collapse">展開/摺疊</string>
+    <string name="load_default_settings">載入預設設定</string>
+    <string name="drag">拖曳</string>
+    <string name="created">已建立</string>
+    <string name="file_encryption_password">檔案加密密碼</string>
+    <string name="code_block">程式碼區塊</string>
 </resources>
