[ci skip] Crowdin translation bot: New translations for Greek

--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -160,4 +160,37 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="append_contexts_and_projects">Προσάρτηση συγκειμένων και έργων</string>
     <string name="append_contexts_and_projects_on_end_of_task">Προσάρτηση συγκειμένων και έργων στο τέλος μιας εργασίας κατά τη χρήση της κατάλληλης ενέργειας κειμένου</string>
     <string name="rtl_rendering">Δεξιά-προς-αριστερή προβολή</string>
+    <string name="highlight_line_ending">Υπογράμμιση τέλους γραμμής</string>
+    <string name="highlight_line_ending_if_two_or_more_spaces">Επισήμανση κενών στο τέλος γραμμών που περιέχουν δύο ή περισσότερα κενά</string>
+    <string name="use_monospace_for_code">Χρήση γραμματοσειράς σταθερού πλάτους για κώδικα</string>
+    <string name="disable_code_block_highlight">Απενεργοποίηση επισήμανσης για μπλοκ κώδικα</string>
+    <string name="auto_renumber_ordered_list">Αυτόματη επαναρίθμηση ταξινομημένων λιστών</string>
+    <string name="auto_renumber_ordered_list_slowdown">Αυτή η επιλογή μπορεί να επηρεάσει τις επιδόσεις της εφαρμογής.</string>
+    <string name="use_different_fonttype_slow_down">Κάντε χρήση ενός διαφορετικού τύπου γραμματοσειράς. Η αλλαγή του επηρεάζει δυναμικά την απόδοση της εφαρμογής.</string>
+    <string name="general">Γενικά</string>
+    <string name="resources">Πόροι</string>
+    <string name="space_between_lines_in_percent">Διάστημα μεταξύ των γραμμών σε ποσοστό</string>
+    <string name="line_spacing">Απόσταση Γραμμών</string>
+    <string name="archive_does_move_done_tasks">Μετακίνηση εργασιών σε καθορισμένο αρχείο στον ίδιο φάκελο</string>
+    <string name="sort_tasks_by_selected_order">Ταξινόμηση εργασιών με βάση την επιλεγμένη σειρά</string>
+    <string name="special_key">Ειδικό πλήκτρο</string>
+    <string name="key_page_up">Σελίδα Επάνω (Page Up)</string>
+    <string name="key_page_down">Σελίδα Κάτω (Page Down)</string>
+    <string name="move_text_one_line_up">Μετακίνηση κειμένου μία γραμμή πάνω</string>
+    <string name="move_text_one_line_down">Μετακίνηση κειμένου μία γραμμή κάτω</string>
+    <string name="start_new_line_below">Ξεκινήστε νέα γραμμή παρακάτω</string>
+    <string name="key_pos_1">Έναρξη Γραμμής (Pos Home)</string>
+    <string name="key_pos_end">Τέλος Γραμμής (Pos Τέλος)</string>
+    <string name="key_pos_1_document">Έναρξη Εγγράφου</string>
+    <string name="key_pos_end_document">Τέλος Εγγράφου</string>
+    <string name="key_ctrl_a">Επιλογή όλων (Ctrl+A)</string>
+    <string name="key_tab">Στηλοθέτης</string>
+    <string name="start_on_bottom">Έναρξη στο κάτω μέρος</string>
+    <string name="start_on_bottom_when_loading_document">Μετά τη φόρτωση ενός εγγράφου, του δρομέα θέσης στο τέλος του</string>
+    <string name="unordered_list_character">Χαρακτήρας για μη ταξινομημένη λίστα</string>
+    <string name="character_to_start_items_of_unordered_list_with">Ποιος χαρακτήρας να χρησιμοποιήται για να υποδείξετε αταξινόμητες λίστες</string>
+    <string name="unordered_list_char_dash">Παύλα (-)</string>
+    <string name="unordered_list_char_asterisk">Αστερίσκος (*)</string>
+    <string name="unordered_list_char_plus">Συν (+)</string>
+    <string name="filemanager_doesnot_supply_required_data__appspecific">Το Markor μπορεί να επεξεργαστεί μόνο τοπικά, offline διαθέσιμα έγγραφα και δεν υποστηρίζει διαχειριστές αρχείων που δεν παρέχουν την πλήρη διαδρομή αρχείου.</string>
 </resources>
