[ci skip] Crowdin translation bot: New translations for Greek

--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -212,4 +212,31 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="open_source_licenses">Άδειες Ανοιχτού Κώδικα</string>
     <string name="rate_this_app">Βαθμολογήστε αυτήν την εφαρμογή</string>
     <string name="translate">Μετάφραση</string>
+    <string name="more_info_and_help">Περισσότερες πληροφορίες και βοήθεια</string>
+    <string name="report_bugs">Αναφορά σφαλμάτων</string>
+    <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">Περισσότερες πληροφορίες σχετικά με τη δωρεά στον προγραμματιστή ή τη συμβολή σε αυτό το έργο.</string>
+    <string name="join_community">Γίνετε μέλος της Κοινότητας</string>
+    <string name="bug_reports_suggest_improvements">Δώστε σχόλια, αναφορά σφαλμάτων ή προτείνετε βελτιώσεις</string>
+    <string name="help_translating_this_app">Μετάφραση αυτής της εφαρμογής σε άλλες γλώσσες</string>
+    <string name="source_code">Πηγαίος Κωδικός</string>
+    <string name="project_license">Άδεια Έργου</string>
+    <string name="project_contribution_info">Πληροφορίες συνεισφοράς έργου</string>
+    <string name="more_info_on_how_to_contribute_to_this_project">Περισσότερες πληροφορίες για το πώς να συνεισφέρετε σε αυτό το έργο</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">Συνεισφέρετε κώδικα στο έργο. Όλοι είναι ευπρόσδεκτοι να το κάνουν, συμπεριλαμβανομένων των νεοεισερχόμενων</string>
+    <string name="project_team">Ομάδα Έργου</string>
+    <string name="contributors_public_add_yourself_description">Εμφάνιση πληροφοριών συνεισφέροντος. Δώστε το να εμφανίζεται εδώ σε βάση opt-in μετά τη συμβολή</string>
+    <string name="descending">φθίνουσα</string>
+    <string name="ascending">αύξουσα</string>
+    <string name="close">Κλείσιμο</string>
+    <string name="cancel">Ακύρωση</string>
+    <string name="do_you_like_this_project_want_donate_to_keep_alive">Σας αρέσει αυτό το έργο? Θέλετε να υποστηρίξετε περαιτέρω βελτιώσεις και διορθώσεις σφαλμάτων?\n\nΗ ανάπτυξη εφαρμογών και η εγγραφή σχετικών δημοσιεύσεων ιστολογίου απαιτούν πολύ χρόνο! Αν θέλετε να βοηθήσετε το έργο να συνεχιστεί, παρακαλώ σκεφτείτε μια μικρή δωρεά!\n\nΑυτό το έργο αναπτύσσεται στον ελεύθερο χρόνο, εντελώς δωρεάν και χωρίς διαφημίσεις!</string>
+    <string name="app_start_tab">Εκκίνηση καρτέλας εφαρμογής</string>
+    <string name="tab_to_select_at_start">Καρτέλα που θα επιλεγεί κατά την εκκίνηση της εφαρμογής</string>
+    <string name="swipe_to_change_mode">Σύρετε για αλλαγή λειτουργίας</string>
+    <string name="swipe_to_change_to_edit_or_view_mode">Σύρετε για αλλαγή σε λειτουργία επεξεργασίας ή προβολής (αντίθετα από την τρέχουσα λειτουργία)</string>
+    <string name="folder_first">Πρώτα ο φάκελος</string>
+    <string name="go_to">Μετάβαση σε</string>
+    <string name="internal_storage">Εσωτερικός αποθηκευτικός χώρος</string>
+    <string name="open_the_document_from_main_view">Μπορείτε να ανοίξετε το έγγραφο από την κύρια προβολή στο κάτω μέρος, τον περιηγητή αρχείων ή τον εκκινητή. Υπάρχει επίσης μια επιλογή για την προσθήκη κειμένου που κοινοποιήθηκε στο Markor.</string>
+    <string name="notebook_is_the_home_of_your_files">Σημειωματάριο είναι ο φάκελος που το Markor φορτώνει στο πρόγραμμα περιήγησης αρχείων όταν ξεκινά η εφαρμογή. Είναι ο αρχικός φάκελος των αρχείων σας.</string>
 </resources>
