--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -263,4 +263,21 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Πάντα να ανοίγετε αρχεία με αυτήν την εφαρμογή, όταν η λίστα περιέχει την επέκταση αρχείου. Χρησιμοποιήστε \'Κανένα, .html, . ss , .js\' για παράδειγμα, αν θέλετε να επεξεργαστείτε τα αρχεία web και αυτά χωρίς επέκταση αρχείου.</string>
     <string name="template">Πρότυπο</string>
     <string name="send_debug_log">Αποστολή Καταγραφής Αποσφαλμάτωσης</string>
+    <string name="help_by_sending_debug_information_to_the_developer">Βοήθεια με την αποστολή πληροφοριών αποσφαλμάτωσης στους προγραμματιστές. Τα δεδομένα αποστέλλονται μέσω email μέσω της εφαρμογής email σας και μπορείτε να δείτε όλα τα απεσταλμένα δεδομένα πριν από την αποστολή. Θα βρείτε μια πρόσθετη επιλογή \"Αποστολή αρχείου καταγραφής σφαλμάτων\" στο επάνω μενού όταν ενεργοποιηθεί. Δημιουργεί πρόχειρο μήνυμα ηλεκτρονικού ταχυδρομείου.</string>
+    <string name="print_pdf">Print / PDF</string>
+    <string name="bigger_headings">Μεγαλύτερες επικεφαλίδες</string>
+    <string name="increase_text_size_of_headings_according_to_level">Αύξηση του μεγέθους κειμένου των κεφαλίδων ανάλογα με το επίπεδο (# h1, ## h2. ## h3…)</string>
+    <string name="current">Τρέχων</string>
+    <string name="record_audio">Εγγραφή Ήχου</string>
+    <string name="attach">Επισύναψη</string>
+    <string name="copy_file">Αντιγραφή αρχείου</string>
+    <string name="load_default_settings">Φόρτωση προεπιλεγμένων ρυθμίσεων</string>
+    <string name="drag">Σύρετε</string>
+    <string name="created">Δημιουργήθηκε</string>
+    <string name="file_encryption_password">Κωδικός πρόσβασης κρυπτογράφησης αρχείου</string>
+    <string name="no_password_set_cannot_encrypt_decrypt">Δεν έχει οριστεί κωδικός πρόσβασης, δεν μπορεί να κρυπτογραφηθεί ή να αποκρυπτογραφηθεί.\nΜεταβείτε στις Ρυθμίσεις -&gt; Γενικά -&gt; Κωδικός πρόσβασης για να ορίσετε έναν κωδικό πρόσβασης.</string>
+    <string name="encrypt_file_content">Κρυπτογράφηση περιεχομένου αρχείου</string>
+    <string name="could_not_encrypt_file_content_the_file_was_not_saved">Αδυναμία κρυπτογράφησης περιεχομένου αρχείου. Το αρχείο δεν αποθηκεύτηκε.</string>
+    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">Δεν ήταν δυνατή η αποκρυπτογράφηση περιεχομένου αρχείου. Χρησιμοποιείτε λάθος κωδικό πρόσβασης? Είναι το αρχείο πραγματικά κρυπτογραφημένο με κρυπτογράφηση Markors AES;</string>
+    <string name="password_already_set_setting_a_new_password_will_overwrite">Ο κωδικός πρόσβασης έχει ήδη οριστεί. Ο ορισμός νέου κωδικού πρόσβασης θα αντικαταστήσει τον υπάρχοντα κωδικό πρόσβασης και ενδέχεται να μην μπορείτε να έχετε πρόσβαση σε αρχεία πια σε περίπτωση που ξεχάσετε τον κωδικό πρόσβασης.</string>
 </resources>
